Add (glitchy) audio loading

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,8 +7,8 @@
   <body>
     <h1>Node audio server</h1>
     <h3>Dev environment</h3>
-    <audio></audio>
     <div id="buttons"></div>
+    <p id="info"></p>
     <script type="module" src="/index.mjs"></script>
   </body>
 </html>
