--- a/dev/index.html
+++ b/dev/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>EME test</title>
+    <link rel="icon" type="image/png" href="data:image/png;base64,ggg==" />
   </head>
   <body>
     <h1>Node audio server</h1>
     <h3>Dev environment</h3>
     <div id="buttons"></div>
     <p id="info"></p>
+    <audio crossorigin="anonymous" controls></audio>
     <script type="module" src="/index.mjs"></script>
   </body>
 </html>
