Add loaded chunk visualisation logic

--- a/dev/index.html
+++ b/dev/index.html
@@ -35,6 +35,16 @@
         position: absolute;
         left: -4px;
         top: -3px;
+        z-index: 10;
+      }
+      .chunk-state {
+        position: absolute;
+        background-color: #999;
+        top: -1px;
+        height: 5px;
+      }
+      .chunk-state.loaded-chunk {
+        background-color: #0f0;
       }
     </style>
   </head>
