--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
 
     <style>
       .controls-wrapper {
-        width: 80%;
+        width: 100%;
         height: 30px;
         display: flex;
       }
@@ -45,6 +45,19 @@
       }
       .chunk-state.loaded-chunk {
         background-color: #0f0;
+      }
+      .time-display {
+        height: 40px;
+        width: 100%;
+        display: flex;
+      }
+      .elapsed-time {
+        flex: 1;
+        text-align: left;
+      }
+      .remaining-time {
+        flex: 1;
+        text-align: right;
       }
     </style>
   </head>
