Move vanillaJs player to its own folder

--- a/dev/index.html
+++ b/dev/index.html
@@ -65,6 +65,6 @@
     <h1>Node audio server</h1>
     <h3>Dev environment</h3>
     <div class="audio-player-container"></div>
-    <script type="module" src="/index.mjs"></script>
+    <script type="module" src="/nativeJavaScript/index.mjs"></script>
   </body>
 </html>
