--- a/dev/index.html
+++ b/dev/index.html
@@ -65,6 +65,9 @@
     <h1>Node audio server</h1>
     <h3>Dev environment</h3>
     <div class="audio-player-container"></div>
-    <script type="module" src="/nativeJavaScript/index.mjs"></script>
+
+    <script type="module" src="/src/client/nativeJavaScript/index.mjs"></script>
+
+    <script src="/dev/dist/react-player.js"></script>
   </body>
 </html>
